Make it clearer that users should delete old clones once cleaning is done
http://stackoverflow.com/a/29779383/438886

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@ $ git reflog expire --expire=now --all && git gc --prune=now --aggressive
 </code></pre>
 <p>Finally, once you're happy with the updated state of your repo, push it back up <em>(note that because your clone command used the <code>--mirror</code> flag, this push will update <strong>all</strong> refs on your remote server)</em>:</p>
 <pre><code>$ git push</code></pre>
-<p>At this point, you're ready for everyone to ditch their old copies of the repo and do fresh clones of the nice, new pristine data.</p>
+<p>At this point, you're ready for everyone to ditch their old copies of the repo and do fresh clones of the nice, new pristine data. It's best to delete all old clones, as they'll have dirty history that you <i>don't</i> want to risk pushing back into your newly cleaned repo.
+</p>
 
 <h1 id="examples">Examples</h1>
 <p>In all these examples <code>bfg</code> is an alias for <code>java -jar bfg.jar</code>.</p>
