Update docs on required Java version - it's now Java 7
See https://github.com/rtyley/bfg-repo-cleaner/commit/8651ad26

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.
 </p>
 <h1>Requirements</h1>
 <ul>
-<li>The <a href="http://java.com/en/download/manual.jsp">Java Runtime Environment</a> (JRE 6.0 or above)</li>
+<li>The <a href="http://java.com/en/download/manual.jsp">Java Runtime Environment</a> (Java 7 or above - BFG <a href="http://repo1.maven.org/maven2/com/madgag/bfg/1.12.3/bfg-1.12.3.jar">v1.12.3</a> was the last version to support Java 6)</li>
 </ul>
 <p>That's it - the Scala library and all other dependencies are folded into the <a class="latest-download-link" href="#download">downloadable jar</a>.</p>
 
