index: Escape ampersands

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.
 
 <a href="https://plus.google.com/+RobertoTyley?rel=author">Google+</a>, <a href="https://twitter.com/rtyley">Twitter</a></p>
           <p><a href="https://travis-ci.org/rtyley/bfg-repo-cleaner"><img src="https://travis-ci.org/rtyley/bfg-repo-cleaner.svg?branch=master" alt="Build Status"></a></p>
-<p><a href="https://www.bountysource.com/teams/bfg-repo-cleaner?utm_source=BFG%20Repo-Cleaner&utm_medium=shield&utm_campaign=raised"><img src="https://www.bountysource.com/badge/team?team_id=28704&style=raised" /></a><p>
+<p><a href="https://www.bountysource.com/teams/bfg-repo-cleaner?utm_source=BFG%20Repo-Cleaner&amp;utm_medium=shield&amp;utm_campaign=raised"><img src="https://www.bountysource.com/badge/team?team_id=28704&amp;style=raised" /></a><p>
 <p><a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://github.com/rtyley/bfg-repo-cleaner"></a>
 <noscript><a href="http://flattr.com/thing/1227783/The-BFG-Repo-Cleaner" target="_blank">
 <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript></p>
