--- a/index.html
+++ b/index.html
@@ -223,9 +223,7 @@ Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.
             <span class="latest-version">.jar file</span>
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/rtyley/bfg-repo-cleaner">The BFG</a> is by <a href="https://github.com/rtyley">Roberto Tyley</a>, the author of <a href="https://play.google.com/store/apps/details?id=com.madgag.agit">Agit</a> - the Git Client for Android devices, and <a href="https://github.com/guardian/gu-who"><i>gu:who</i></a> - a tool to help manage GitHub org membership.
-
-<a href="https://plus.google.com/+RobertoTyley?rel=author">Google+</a>, <a href="https://twitter.com/rtyley">Twitter</a></p>
+          <p class="repo-owner"><a href="https://github.com/rtyley/bfg-repo-cleaner">The BFG</a> is by <a href="https://github.com/rtyley">Roberto Tyley</a>, the author of <a href="https://github.com/guardian/prout">Prout</a>, <a href="https://github.com/guardian/gu-who">gu:who</a>, <a href="https://play.google.com/store/apps/details?id=com.madgag.agit">Agit</a> and the packager of <a href="https://rtyley.github.io/spongycastle/">Spongy Castle</a>. <a href="https://twitter.com/rtyley">Twitter</a> <a href="https://plus.google.com/+RobertoTyley?rel=author">Google+</a> <a href="rtyley.gpg">PGP</a></p>
           <p><a href="https://travis-ci.org/rtyley/bfg-repo-cleaner"><img src="https://travis-ci.org/rtyley/bfg-repo-cleaner.svg?branch=master" alt="Build Status"></a></p>
 <p><a href="https://www.bountysource.com/teams/bfg-repo-cleaner?utm_source=BFG%20Repo-Cleaner&amp;utm_medium=shield&amp;utm_campaign=raised"><img src="https://www.bountysource.com/badge/team?team_id=28704&amp;style=raised" /></a><p>
 <p><a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://github.com/rtyley/bfg-repo-cleaner"></a>
