Fixes #285, broken download link
Maven central updated their website and broke old links, adding a "classic" to the url fixes this link.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.
         </section>
 
         <aside id="sidebar">
-          <a id="download" class="button latest-download-link" data-event-category="Main download button" href="https://search.maven.org/remote_content?g=com.madgag&a=bfg&v=LATEST">
+          <a id="download" class="button latest-download-link" data-event-category="Main download button" href="https://search.maven.org/classic/remote_content?g=com.madgag&a=bfg&v=LATEST">
             <small>Download</small>
             <span class="latest-version">.jar file</span>
           </a>
