Fix the download link, as per #352
This url seems no longer supported by search.maven.org:

https://search.maven.org/classic/remote_content?g=com.madgag&a=bfg&v=LATEST

...it redirects to https://repo1.maven.org/maven2/com/madgag/bfg/LATEST/bfg-LATEST.jar
which yields a 404.

There used to be some javascript on the page that queried the
search.maven.org API to establish the latest available version - but that
is now blocked in Chrome by CORB:

```
jquery.min.js:2 Cross-Origin Read Blocking (CORB) blocked cross-origin response https://search.maven.org/solrsearch/select/?q=g:%22com.madgag%22+AND+a:%22bfg%22&wt=json&json.wrf=jQuery1830057884001645965855_1579120069673&indent=true&_=1579120069679 with MIME type application/json. See https://www.chromestatus.com/feature/5629709824032768 for more details.
```

https://www.chromestatus.com/feature/5629709824032768

...with both methods broken, there was no usable download on the page,
so thanks to @FredericoCoelhoNunes for pointing out the problem!


https://github.com/rtyley/bfg-repo-cleaner/issues/352

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.
         </section>
 
         <aside id="sidebar">
-          <a id="download" class="button latest-download-link" data-event-category="Main download button" href="https://search.maven.org/classic/remote_content?g=com.madgag&a=bfg&v=LATEST">
+          <a id="download" class="button latest-download-link" data-event-category="Main download button" href="https://repo1.maven.org/maven2/com/madgag/bfg/1.13.0/bfg-1.13.0.jar">
             <small>Download</small>
             <span class="latest-version">.jar file</span>
           </a>
@@ -248,11 +248,7 @@ Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>
-
-$.ajax({ dataType: "jsonp", timeout: 5000,
-  url: 'https://search.maven.org/solrsearch/select/?q=g:"com.madgag"+AND+a:"bfg"&wt=json&json.wrf=?&indent=true'
-}).done(function ( data ) {
-    var v = data.response.docs[0].latestVersion;
+    var v = "1.13.0";
     var u = "https://repo1.maven.org/maven2/com/madgag/bfg/"+v+"/bfg-"+v+".jar"
     $('.latest-version').text('v' + v);
     $('.latest-download-link').prop("href", u).click(function(event) {
@@ -268,8 +264,6 @@ $.ajax({ dataType: "jsonp", timeout: 5000,
             return false;
         }
     });
-});
-
 </script>
   </body>
 </html>
